@@ -8,7 +8,6 @@
 (ext:re-export "CUSTOM" "EXT")
 (export
  '(*command-index* prompt-new-package
-   #+unix make-xterm-io-stream
    break-level step-level)
  "EXT")
 (in-package "SYSTEM")
@@ -697,28 +696,6 @@ Continue       :c       switch off single step mode, continue evaluation
       (setq *step-quit* 0)
       (go over))))
 
-;;;--------------------------------------------------------------------------
-#+unix
-(defun make-xterm-io-stream ()
-  (let* ((pipe (with-open-stream (s (make-pipe-input-stream
-                                     "mktemp /tmp/clisp-x-io-XXXXXX"))
-                 (read-line s)))
-         (title "CLISP I/O")
-         xio
-         (clos::*warn-if-gf-already-called* nil))
-    (shell (format nil "rm -f ~a; mknod ~a p; ~
-                   xterm -n ~s -T ~s -e 'tty >> ~a; cat ~a' &"
-                   pipe pipe title title pipe pipe))
-    (setq xio (open (with-open-file (s pipe :direction :input) (read-line s))
-                    :direction :io))
-    (defmethod close :after ((x (eql xio)) &rest junk)
-      (declare (ignore x junk))
-      (with-open-file (s pipe :direction :output)
-        (write-line (TEXT "Bye.") s))
-      (delete-file pipe)
-      (let ((clos::*warn-if-gf-already-called* nil))
-        (remove-method #'close (find-method #'close '(:after) `((eql ,xio))))))
-    xio))
 ;;;--------------------------------------------------------------------------
 
 ;; Now that condition.lisp is loaded and *break-driver* has a value:
